<resources>
    <string name="app_name">HeartGuard</string>
    <string name="brand_name">현장가드</string>
    <string name="common_menu">메뉴</string>
    <string name="common_notifications">알림</string>
    <string name="common_back_description">뒤로 가기</string>
    <string name="common_confirm">확인</string>
    <string name="common_cancel">취소</string>
    <string name="common_optional_parenthesized">(선택)</string>
    <string name="common_call">전화 걸기</string>
    <string name="common_retry">재시도</string>
    <string name="save_retry">다시 시도하기</string>
    <string name="auth_email">이메일</string>
...
    <string name="withdraw_reason_field_work_ended">현장 작업이 종료되었어요</string>
    <string name="withdraw_reason_changed_company">다른 회사로 이직했어요</string>
    <string name="withdraw_reason_inconvenient">앱 사용이 불편해요</string>
    <string name="withdraw_reason_other">기타</string>
    <string name="withdraw_password_label">비밀번호 확인</string>
    <string name="withdraw_password_placeholder">현재 비밀번호를 입력해주세요</string>
    <string name="withdraw_agree">유의사항을 모두 확인했으며, 탈퇴에 동의해요</string>
    <string name="withdraw_action">탈퇴하기</string>
    <string name="withdraw_confirm_title">정말 탈퇴하시겠어요?</string>
    <string name="withdraw_confirm_message">소속 팀의 모든 작업자 계정과 세션이 비활성화돼요.\n기존 기록과 사진은 생성일부터 365일 뒤 삭제돼요.</string>
    <string name="withdraw_failure_message">탈퇴하지 못했어요. 잠시 후 다시 시도해주세요.</string>
    <string name="withdraw_done_title">탈퇴가 완료되었어요</string>
    <string name="withdraw_done_message">그동안 폭염가드를 이용해주셔서 감사해요</string>
    <!-- 서버 값 표시 -->
    <!-- 서버에서 값을 아직 받지 못했거나 해당 API가 없을 때 표시하는 빈 값이며 번역 대상이 아니다. -->
    <string name="common_empty_value" translatable="false">--</string>
    <string name="profile_title">내 정보 수정</string>
    <string name="profile_worker_role">현장작업자</string>
    <string name="profile_company">회사명</string>
...
